[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/FontH1.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/button/back_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/shared/header.gd" type="Script" id=3]

[node name="Header" type="MarginContainer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -42.5
margin_bottom = 42.5
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_top = 20.0
margin_right = 1280.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 1 )
text = "Words of Power Editor"
align = 1
valign = 1
clip_text = true

[node name="MarginLeft" type="MarginContainer" parent="Title"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="Title/MarginLeft" instance=ExtResource( 2 )]
margin_left = 30.0
margin_top = 10.0
margin_right = 83.0
margin_bottom = 30.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginRight" type="MarginContainer" parent="Title"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -183.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Title/MarginRight"]
margin_left = 30.0
margin_right = 163.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ServerLabel" type="Label" parent="Title/MarginRight/HBox"]
margin_top = 15.0
margin_right = 123.0
margin_bottom = 29.0
text = "TexnoMagic server:"

[node name="ServerStatus" type="Label" parent="Title/MarginRight/HBox"]
margin_left = 127.0
margin_top = 15.0
margin_right = 133.0
margin_bottom = 29.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "?"

[node name="StatusTimer" type="Timer" parent="."]

[connection signal="timeout" from="StatusTimer" to="." method="_on_StatusTimer_timeout"]
